docker/kubernetes/base-central-station.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: base-central-station
spec:
  replicas: 1
  selector:
    matchLabels:
      app: base-central-station
  template:
    metadata:
      labels:
        app: base-central-station
    spec:
      containers:
        - name: base-central-station
          image: base-central-station:latest
          imagePullPolicy: IfNotPresent

          volumeMounts:
            - name: base-station-elastic-data
              mountPath: /output
      volumes:
        - name: base-station-elastic-data
          persistentVolumeClaim:
            claimName: base-station-elastic-data

# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: base-central-station
# spec:
#   selector:
#     app: base-central-station
#   ports:
#     - protocol: TCP
#       port: 8080
#       targetPort: 8080
