docker/kubernetes/elastic-kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elastic-search
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elastic-search
  template:
    metadata:
      labels:
        app: elastic-search
    spec:
      containers:
        - name: elastic-search
          image: elastic-search:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 9200
            - containerPort: 9300
          volumeMounts:
            - name: base-station-elastic-data
              mountPath: /output
      volumes:
        - name: base-station-elastic-data
          persistentVolumeClaim:
            claimName: base-station-elastic-data

---
apiVersion: v1
kind: Service
metadata:
  name: elastic-search
spec:
  selector:
    app: elastic-search
  ports:
    - name: http
      protocol: TCP
      port: 9200
      targetPort: 9200
    - name: transport
      protocol: TCP
      port: 9300
      targetPort: 9300

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
        - name: kibana
          image: docker.elastic.co/kibana/kibana:7.17.21
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5601

---
apiVersion: v1
kind: Service
metadata:
  name: kibana
spec:
  selector:
    app: kibana
  ports:
    - protocol: TCP
      port: 5601
      targetPort: 5601
