docker/kubernetes/kafka-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -o kubernetes/
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: kafka
  name: kafka
spec:
  ports:
    - name: "29092"
      port: 29092
      targetPort: 29092
  selector:
    io.kompose.service: kafka
status:
  loadBalancer: {}
